# calculator

./: README.md  io.github.idevecore.Calculator.Devel.json  meson.build
.flatpak-builder/cache/refs/heads/x86_64-io.github.idevecore.Calculator.Devel.json/: build-blueprint  init
.flatpak-builder/checksums/: x86_64-io.github.idevecore.Calculator.Devel.json
.github/: FUNDING.yml
data/: io.github.idevecore.Calculator.appdata.xml.in.in  io.github.idevecore.Calculator.desktop.in.in  io.github.idevecore.Calculator.gschema.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES
src/: calculator.gresource.xml  calculator.in  define.in  main.py  meson.build  window.blp  window.py
src/assets/: styles.css
src/assets/icons/: meson.build
src/components/: __init__.py
src/components/shortcuts/: shortcuts.blp  shortcuts.py
src/components/theme_selector/: theme_selector.blp  theme_selector.py
